tests/baselines/reference/decoratorOnClassConstructor2.errors.txt
2.ts(1,20): error TS5097: An import path can only end with a '.ts' extension when 'allowImportingTsExtensions' is enabled.
2.ts(2,19): error TS5097: An import path can only end with a '.ts' extension when 'allowImportingTsExtensions' is enabled.


==== 0.ts (0 errors) ====
    export class base { }
    export function foo(target: Object, propertyKey: string | symbol, parameterIndex: number) { }
    
==== 2.ts (2 errors) ====
    import {base} from "./0.ts"
                       ~~~~~~~~
!!! error TS5097: An import path can only end with a '.ts' extension when 'allowImportingTsExtensions' is enabled.
    import {foo} from "./0.ts"
                      ~~~~~~~~
!!! error TS5097: An import path can only end with a '.ts' extension when 'allowImportingTsExtensions' is enabled.
    export class C  extends base{
        constructor(@foo prop: any) {
            super();
        }
    }